--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   multi_select_flutter: ^4.1.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
