--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   multi_select_flutter: ^4.1.3
   get: ^4.6.6
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
